--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,4 +1,4 @@
-icon: https://tzchzblob.vercel.app/about.jpg
+icon: https://raw.githubusercontent.com/314257smcag2/VPSMG1/main/VPSMG1.jpeg
 deploy:
   - okteto stack deploy --build -f docker-compose.yml
 devs:
