--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,6 @@
 services:
-    vpsmg1:
-        public: true
-        container_name: VPSMG1
-        image: imlala/ubuntu-xfce-vnc-novnc:latest
-        ports:
-            - 6080:6080
-        environment: 
-            - VNC_PASSWD=root
-            - GEOMETRY=1280x768
-            - TZ=Asia/Shanghai
-            - DEPTH=24
-        volumes: 
-            - /root/Desktop
-            - /home
-        resources:
-          cpu: 500m
-          memory: 3072Mi
-          storage:
-            size: 500Mi
-            class: standard
+  vpsmg1:
+    build: .
+    shm_size: 3gb
+    ports:
+      - "80:80"
