--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,5 +1,5 @@
 icon: https://raw.githubusercontent.com/314257smcag2/VPSMG1/main/VPSMG1.jpeg
 deploy:
-  - okteto stack deploy --build -f docker-compose.yml
+  - okteto stack deploy --build -f docker.yml
 devs:
-  - docker-compose.yml
+  - docker.yml
