--- a/docker.yml
+++ b/docker.yml
@@ -1,1 +1,1 @@
-docker build --privileged --shm-size 20g -f dockerfile  -p 8080:10000 -e USER_PWD=AliAly032230 -e USER_NAME=shakugan -e ROOT_PWD=AliAly032230
+docker run --privileged --shm-size 20g -t dockerfile  -p 8080:10000 -e USER_PWD=AliAly032230 -e USER_NAME=shakugan -e ROOT_PWD=AliAly032230
