--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,5 +1,5 @@
 icon: https://raw.githubusercontent.com/314257smcag2/VPSMG1/main/VPSMG1.jpeg
 deploy:
-  - okteto stack deploy --build -f Dockerfile
+  - okteto stack deploy --build -f docker-compose.yml
 devs:
-  - docker run --privileged --shm-size 20g -d-p 8080:10000 -e USER_PWD=AliAly032230 -e USER_NAME=shakugan -e ROOT_PWD=AliAly032230
+  - docker-compose.yml
